--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -9,15 +9,15 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div id="card">
+  <main id="card">
     <img src="images/image-qr-code.png" alt="QR code">
-    <h2>Improve your front-end skills by building projects</h2>
+    <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
+  </main>
 
-  <div class="attribution">
+  <footer class="attribution">
     <p>by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br><br>
     Coded by <a target="_blank" href="#">NANN EI EI WIN</a>.</p>
-  </div>
+  </footer>
 </body>
 </html>
