--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -17,7 +17,7 @@
 
   <footer class="attribution">
     <p>by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br><br>
-    Coded by <a target="_blank" href="#">NANN EI EI WIN</a>.</p>
+    Coded by <a target="_blank" href="https://neew18.github.io/neew-links-tree/">NANN EI EI WIN</a>.</p>
   </footer>
 </body>
 </html>
